updated run script